--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     body {
       overflow: hidden;
       background-color: pink; /* Pink background */
-      color: #fff; /* Red text */
+      color: red; /* Red text */
       font-family: Arial, sans-serif;
+    }
+    .love-card {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: red;
+      color: white;
+      padding: 20px;
+      border-radius: 20px;
     }
     .heart {
       position: absolute;
@@ -32,14 +42,10 @@
   </style>
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <h1 class="text-center mt-5 mb-4">Happy Valentine's Day!</h1>
-        <h2 class="text-center">Victor Lai & Kimberly Chang Yii</h2>
-        <div id="countdown" class="mt-4"></div>
-      </div>
-    </div>
+  <div class="love-card">
+    <h1 class="text-center mb-4">Happy Valentine's Day!</h1>
+    <h2 class="text-center">Victor Lai & Kimberly Chang Yii</h2>
+    <div id="countdown" class="mt-4 text-center"></div>
   </div>
 
   <!-- Font Awesome -->
@@ -75,6 +81,7 @@
       var heart = document.createElement('i');
       heart.classList.add('fas', 'fa-heart', 'heart');
       heart.style.left = Math.random() * window.innerWidth + 'px';
+      heart.style.top = -Math.random() * window.innerHeight + 'px'; // Randomize the height
       document.body.appendChild(heart);
       setTimeout(function () {
         heart.remove();
@@ -82,7 +89,7 @@
     }
 
     // Create hearts every 0.5 seconds
-    setInterval(createHeart, 100);
+    setInterval(createHeart, 500);
   </script>
 </body>
 </html>
