--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       modalBody.classList.add('modal-body');
 
       var photo = document.createElement('img');
-      photo.src = 'loveu520.JPG'; // Change 'your-photo.jpg' to the actual path of your photo
+      photo.src = 'loveu520.jpg'; // Change 'your-photo.jpg' to the actual path of your photo
       photo.style.maxWidth = '100%';
       photo.style.height = 'auto';
       modalBody.appendChild(photo);
