--- a/QRFOOD.html
+++ b/QRFOOD.html
@@ -131,6 +131,7 @@ div.secondary-nav .nav-link.active {color: #000; box-shadow: inset 0px -3px 0px 
       padding: 10px;
     }
 	.nav_container_left{
+		width: 50px;
 		img-color: orange;
 	}
 	.nav_container_right{
@@ -175,7 +176,7 @@ div.secondary-nav .nav-link.active {color: #000; box-shadow: inset 0px -3px 0px 
 <body data-spy="scroll" data-target="#secondary-nav" data-offset="55">
   
 <div class="container_top bg-success bg-gradient">
-  <div class="nav_container_left shadow" id="nav_container_left">
+  <div class="nav_container_left" id="nav_container_left">
     <img src="new-food.jpg" style="width: 20px; height: 20px">
   </div>
   <div class="nav_container_center fw-bold" id="nav_container_center">
