--- a/QRFOOD.html
+++ b/QRFOOD.html
@@ -4,6 +4,7 @@
 <title>ZIG ZAG KOPITIAM</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -153,9 +154,9 @@
 	.float-card {
 		position: fixed;
 		bottom: 10px;
-		left: 2%;
-		right; 2%;
-		width: 96%;
+		left: 10%;
+		right; 10%;
+		width: 80%;
 		color: white;
 		padding: 10px;
 		border: none;
@@ -512,13 +513,18 @@
 	</div>
 
 	<!-- Update the button in the HTML body to trigger the modal -->
-	<div class="float-card-background bg-success bg-gradient shadow" style="height:65px;">
+	<div class="float-card-background bg-success bg-gradient shadow opacity-75" style="height:65px;">
 	</div>
-	<button class="float-card bg-warning bg-gradient shadow" data-bs-toggle="modal" data-bs-target="#cartModal">
-		Order List
-			<span id="cartBadge" class="badge bg-success">
-				0
-			</span>
+	<button class="float-card bg-warning bg-gradient shadow d-flex justify-content-between " data-bs-toggle="modal" data-bs-target="#cartModal">
+		<div>
+			<img src="cart-shopping-solid.png" style="height:20px;">
+		</div>
+		<div class="fw-bold" style="color:rgb(19, 87, 54);">
+			ORDER LIST
+		</div>
+		<span id="cartBadge" class="" style="background-color:rgb(19, 87, 54); width:25px; border-radius:4px;">
+			0
+		</span>
 	</button>
 
 	
