--- a/QRFOOD.html
+++ b/QRFOOD.html
@@ -362,12 +362,12 @@
 					var listItem = document.createElement('div');
 					listItem.classList.add('food-container'); // Optional: Add a class for styling
 					listItem.innerHTML = 
-						'<div class="flex-container">' +
+						'<div class="flex-container add-food">' +
 							'<div style="width: 65%; display: table;">' +
 								'<div class="card-body" style="display: table-cell; vertical-align: middle;">' +
 									'<h5 class="card-title">' + foodName + '</h5>' +
 									'<p class="card-text"><small class="text-muted">RM ' + foodPrice.toFixed(2) + '</small></p>' + // Use toFixed after parsing
-									'<a href="#" class="btn bg-success bg-gradient btn-sm fw-bold shadow add-food">+ ADD</a>' +
+									'<a href="#" class="btn bg-success bg-gradient btn-sm fw-bold shadow">+ ADD</a>' +
 								'</div>' +
 							'</div>' +
 							'<div style="width: 35%; padding:10px;">' +
