--- a/admin.html
+++ b/admin.html
@@ -107,7 +107,7 @@
 
 			//sign in with firebase auth
 			auth.signInWithEmailAndPassword(email, password).then(user =>{
-				window.location.href = "firebase.html";
+				window.location.href = "main_console.html";
 			}).catch(err => {
 				alert("Email or Password incorrect please try again");
 			});
