--- a/QRFOOD.html
+++ b/QRFOOD.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>ZIG ZAG KOPITIAM</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -189,6 +189,9 @@
 			height: 5px; 
 			width: 100%;
 		}
+		.carousel-inner{
+			background-color: gray;
+		}
 	</style>
 </head>
 
@@ -204,21 +207,9 @@
 
 	<div class="container_middle">
 		<div id="carouselExampleIndicators" class="carousel slide">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			<div class="carousel-indicators" id="Food_Gallery_Indicator">
 			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="new-food-ads.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="new-food-ads.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="new-food-ads.jpg" class="d-block w-100" alt="...">
-				</div>
+			<div class="carousel-inner" id="Food_Gallery">
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -311,12 +302,56 @@
 	
 	// Get a reference to the database service
 	var database = firebase.database();
-
+	
 	// Reference to your Food_Category in Firebase
 	var foodCategoryRef = database.ref('Food_Category');
 	
 	// Reference to your Food_Item in Firebase
 	var foodItemRef = database.ref('Food_Item');
+
+	// Reference to your Food_Gallery in Firebase
+	var foodGalleryRef = database.ref('Food_Gallery');
+	
+	var foodGalleryRef = database.ref('Food_Gallery');
+
+	foodGalleryRef.once('value', function(snapshot) {
+		var firstImage = true; // Flag to track if it's the first image
+		var indicatorsNo = 0;
+
+		snapshot.forEach(function(childSnapshot) {
+			// Extract data from the snapshot
+			var galleryImg = childSnapshot.val();
+
+			var GalleryList = document.getElementById('Food_Gallery');
+			var GalleryInicatorList = document.getElementById('Food_Gallery_Indicator');
+
+			// Ensure the container exists before appending child elements
+			if (GalleryList) {
+				// Create HTML elements for each food item
+				var GalleryItem = document.createElement('div');
+				var GalleryInicator = document.createElement('div'); // Create GalleryInicator element
+				GalleryItem.classList.add('carousel-item'); // Add class for styling
+				GalleryItem.classList.add('text-center'); // Add class for styling
+
+				// Add 'active' class to the first image
+				if (firstImage) {
+					GalleryItem.classList.add('active');
+					firstImage = false; // Update the flag
+					GalleryInicator.innerHTML = '<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>';
+				}else{
+					indicatorsNo++;
+					GalleryInicator.innerHTML = '<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="' + indicatorsNo + '" aria-label="Slide 2"></button>';
+				}
+
+				GalleryItem.innerHTML = '<img src="' + galleryImg + '" class="d-block" style="height:auto; max-height:250px; margin-left: auto; margin-right: auto;" alt="...">';
+				
+				// Append the food item to the container
+				GalleryList.appendChild(GalleryItem);
+				GalleryInicatorList.appendChild(GalleryInicator); // Append GalleryInicator
+			}
+		});
+	});
+
 
 	// Read data from Firebase
 	foodCategoryRef.once('value', function(snapshot) {
