--- a/resume.html
+++ b/resume.html
@@ -402,27 +402,17 @@
                 loadingIndicator.style.cssText = 'position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,0.8);color:white;padding:20px;border-radius:10px;z-index:9999;';
                 document.body.appendChild(loadingIndicator);
                 
-                // Use dom-to-image for better results with high quality
+                // Use dom-to-image for better results
                 domtoimage.toPng(resumeElement, {
                     quality: 4.0,
                     bgcolor: '#ffffff',
-                    width: resumeElement.offsetWidth * 2,  // Double width for higher resolution
-                    height: resumeElement.offsetHeight * 2, // Double height for higher resolution
-                    pixelRatio: 2, // High DPI for crisp text and graphics
-                    cacheBust: true, // Ensure fresh render
-                    imagePlaceholder: undefined, // Better image handling
-                    filter: function (node) {
-                        // Exclude floating download button and any hidden elements
-                        return !(node.id === 'downloadBtn' || node.style.display === 'none');
-                    },
+                    width: resumeElement.offsetWidth,
+                    height: resumeElement.offsetHeight,
                     style: {
                         margin: '0',
                         padding: '0',
-                        transform: 'scale(2)', // Scale up for higher quality
-                        transformOrigin: 'top left',
-                        '-webkit-font-smoothing': 'antialiased',
-                        '-moz-osx-font-smoothing': 'grayscale',
-                        'font-smoothing': 'antialiased'
+                        transform: 'scale(4)',
+                        transformOrigin: 'top left'
                     }
                 })
                 .then(function (dataUrl) {
