--- a/resume.html
+++ b/resume.html
@@ -406,8 +406,8 @@
                 domtoimage.toPng(resumeElement, {
                     quality: 4.0,
                     bgcolor: '#ffffff',
-                    width: resumeElement.offsetWidth,
-                    height: resumeElement.offsetHeight,
+                    width: 840,
+                    height: 1188,
                     style: {
                         margin: '0',
                         padding: '0',
